feat(security): 完成权限目录与前端授权迁移